--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=payment-gateway-integration
+
+#Enter your paypal clientId
+paypal.client.id=AbCdEfGhIjKlMnOpQrStUvWxYz1234567890
+#Enter your paypal secret key
+paypal.client.secret=1234567890aBcDeFgHiJkLmNoPqRsTuVwXyZ
+paypal.mode=sandbox
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/payment-gateway-integration
+spring.datasource.username=postgres
+spring.datasource.password=Kru@postgre
+spring.jpa.properties.hibernate.default_schema=payment-gateway-integration
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
